[package]
name = "ruquotes"
version = "0.1.0"
description = "A simple command line tool to get random quotes."
license = "MIT"
homepage = "https://github.com/UltiRequiem/ruquotes"
repository = "https://github.com/UltiRequiem/ruquotes"
license-file = "license"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.0", features = ["json"] }
serde = "1.0.119"
serde_json = "1.0.61"
serde_derive = "1.0.119"
colored = "2"
tokio = { version = "1.0.2", features = ["full"] }
