[package]
name = "ruquotes"
version = "0.2.0"
description = "A simple command line tool to get random quotes."
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/UltiRequiem/ruquotes"
repository = "https://github.com/UltiRequiem/ruquotes"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.0", features = ["json"] }
futures = "0.3"
serde = "1.0.119"
serde_json = "1.0.61"
clap = { version = "3.1.8", features = ["derive"] }
serde_derive = "1.0.119"
colored = "2"
tokio = { version = "1.0.2", features = ["full"] }
